src/test/ui/closures/closure-bounds-static-cant-capture-borrowed.rs
fn bar<F>(blk: F) where F: FnOnce() + 'static {
}

fn foo(x: &()) {
    bar(|| {
        //~^ ERROR `x` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement [E0759]
        let _ = x;
    })
}

fn main() {
}
